--- a/frmMain.resx
+++ b/frmMain.resx
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <root>
   <!-- 
     Microsoft ResX Schema 
@@ -289,7 +289,7 @@
     <value>1</value>
   </data>
   <metadata name="VMSnap.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>332, 8</value>
+    <value>352, 9</value>
   </metadata>
   <data name="_VMSnap_0.Location" type="System.Drawing.Point, System.Drawing">
     <value>8, 10</value>
@@ -316,7 +316,7 @@
     <value>0</value>
   </data>
   <metadata name="VMName.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>260, 8</value>
+    <value>259, 8</value>
   </metadata>
   <data name="_VMName_0.Location" type="System.Drawing.Point, System.Drawing">
     <value>80, 8</value>
@@ -346,7 +346,7 @@
     <value>1</value>
   </data>
   <metadata name="VMDescription.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>146, 8</value>
+    <value>145, 8</value>
   </metadata>
   <data name="_VMDescription_0.Location" type="System.Drawing.Point, System.Drawing">
     <value>80, 32</value>
@@ -376,7 +376,7 @@
     <value>2</value>
   </data>
   <metadata name="VM.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>92, 8</value>
+    <value>91, 8</value>
   </metadata>
   <data name="_VM_0.Location" type="System.Drawing.Point, System.Drawing">
     <value>0, -61</value>
@@ -427,7 +427,7 @@
     <value>5</value>
   </data>
   <metadata name="VirtualMacTray.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>407, 10</value>
+    <value>433, 9</value>
   </metadata>
   <data name="VirtualMacTray.BalloonTipText" xml:space="preserve">
     <value>Welcome to the Vintage Macintosh emulator FrontEnd</value>
@@ -436,7 +436,7 @@
     <value>Welcome to Virtual Mac!</value>
   </data>
   <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>527, 12</value>
+    <value>553, 11</value>
   </metadata>
   <data name="ShowVMC.Font" type="System.Drawing.Font, System.Drawing">
     <value>Tahoma, 8.25pt, style=Bold</value>
@@ -609,7 +609,7 @@
     <value>True</value>
   </data>
   <metadata name="MainMenu1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>674, 13</value>
+    <value>700, 12</value>
   </metadata>
   <data name="MenuItem1.Text" xml:space="preserve">
     <value>File</value>
